# laba4oop

./: CMakeLists.txt
array/: CMakeLists.txt  array.hpp
practice/: CMakeLists.txt  arrays.cpp  numbtwo.cpp  vectors.cpp
vector/: CMakeLists.txt  vector.cpp  vector.hpp
